Cherry-pick 259548.408@safari-7615.2.1-branch (0489426718c9). https://bugs.webkit.org/show_bug.cgi?id=253431

OffscreenCanvas support without WebGL breaks Construct 3 content.
    https://bugs.webkit.org/show_bug.cgi?id=253431
    <rdar://106341361>

    Reviewed by Chris Dumez.

    Construct 3 is testing for the presence of OffscreenCanvas on the main thread, and then assumes
    that a WebGL context will be able to be constructed from it.
    We've only enabled Canvas2D on OffscreenCanvas currently, so detect this library and disable
    OffscreenCanvas entirely.

    * LayoutTests/fast/canvas/offscreen-disabled-construct3-quirk-expected.txt: Added.
    * LayoutTests/fast/canvas/offscreen-disabled-construct3-quirk.html: Added.
    * Source/WebCore/bindings/js/JSDOMWindowCustom.cpp:
    (WebCore::JSDOMWindow::getOwnPropertySlot):

    Canonical link: https://commits.webkit.org/259548.408@safari-7615-branch